# Cpp-library-installations

./: .gitignore  get-asio.sh  install-boost.sh  install-libcurl.sh  install_boost.sh  install_zlib.sh  readme.md
abseil/: install-abseil.sh
abseil/abseil-eg/: CMakeLists.txt  build.sh  hello_world.cc
hdf5/: install-hdf5.sh
libcurl-curlpp/: install-curlpp.sh
libcurl-curlpp/curlpp-eg/: Makefile  curlpp-eg.cpp  libcurl-eg.c
lmdb/: install-lmdb.sh
lmdb/eg/: Makefile  run.sh
mongodb/: install-mongodb.sh
mongodb/mongodb-eg/: CMakeLists.txt  Makefile  build.sh  conanfile.txt  main.cpp  readme.md
zlib/: install-zlib.sh
zlib/zlib-eg/: Makefile  make-and-test.sh  message.txt
